reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_745_col_5_001.log

*** crates/tracewake-core/src/projections.rs:745:5: replace typed_notebook_lead -> Option<NotebookLeadEntry> with Some(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace typed_notebook_lead -> Option<NotebookLeadEntry> with Some(Default::default())
@@ -737,57 +737,17 @@
     }
 }
 
 fn typed_notebook_lead(
     projection: &EpistemicProjection,
     context: &KnowledgeContext,
     contradiction: &Contradiction,
 ) -> Option<NotebookLeadEntry> {
-    if contradiction.kind() != ContradictionKind::ExpectedItemAbsentFromContainer {
-        return None;
-    }
-    let Proposition::ItemMissingFromExpectedLocation {
-        item_id,
-        expected_location,
-    } = &contradiction.observed_proposition()
-    else {
-        return None;
-    };
-    let observation = projection.observation(contradiction.contradicting_observation_id())?;
-    let possible_next_actions = match expected_location {
-        Location::InContainer(container_id) => {
-            vec![format!("check.container.{}", container_id.as_str())]
-        }
-        Location::AtPlace(place_id) => vec![format!("inspect.place.{}", place_id.as_str())],
-        Location::CarriedBy(actor_id) => vec![format!("ask.actor.{}", actor_id.as_str())],
-    };
-
-    Some(NotebookLeadEntry {
-        lead_id: format!("lead.{}", contradiction.contradiction_id().as_str()),
-        contradiction_id: contradiction.contradiction_id().as_str().to_string(),
-        belief_id: contradiction
-            .prior_expectation_belief_id()
-            .as_str()
-            .to_string(),
-        observation_id: observation.observation_id().as_str().to_string(),
-        source_kind: source_kind(observation.source()).to_string(),
-        source_summary: source_summary(observation.source()),
-        confidence_label: observation.confidence().serialize_canonical(),
-        detected_tick: contradiction.detected_tick().value(),
-        staleness_label: staleness_label(context, contradiction.detected_tick()),
-        how_this_may_be_wrong: "The item may have moved through an unobserved ordinary event."
-            .to_string(),
-        possible_next_actions,
-        summary: format!(
-            "Source-bound lead from {}: {} missing from expected location",
-            contradiction.contradiction_id().as_str(),
-            item_id.as_str()
-        ),
-    })
+    Some(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn source_kind(source: &SourceRef) -> &'static str {
     match source {
         SourceRef::Event(_) => "event",
         SourceRef::Action(_) => "action",
         SourceRef::Cause(_) => "cause",
     }


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/projections.rs` has changed (1781904694.843923861s, 4s after last build at 1781904690.819923894s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `ContradictionKind`
 --> crates/tracewake-core/src/projections.rs:6:55
  |
6 | use crate::epistemics::contradiction::{Contradiction, ContradictionKind};
  |                                                       ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::epistemics::proposition::Proposition`
 --> crates/tracewake-core/src/projections.rs:7:5
  |
7 | use crate::epistemics::proposition::Proposition;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotebookLeadEntry: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:745:10
    |
745 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NotebookLeadEntry`
    |
help: consider annotating `NotebookLeadEntry` with `#[derive(Default)]`
   --> crates/tracewake-core/src/view_models.rs:145:1
    |
145 + #[derive(Default)]
146 | pub struct NotebookLeadEntry {
    |

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 2 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `view_models::NotebookLeadEntry: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:745:10
    |
745 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `view_models::NotebookLeadEntry`
    |
help: consider annotating `view_models::NotebookLeadEntry` with `#[derive(Default)]`
   --> crates/tracewake-core/src/view_models.rs:145:1
    |
145 + #[derive(Default)]
146 | pub struct NotebookLeadEntry {
    |

warning: `tracewake-core` (lib test) generated 2 warnings (2 duplicates)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
